# xmcu

./: .gitmodules  CMakeLists.txt  Duration.hpp  Frequency.hpp  Limited.hpp  Non_constructible.hpp  Non_copyable.hpp  Not_null.hpp  README.md  assertion.cpp  assertion.hpp  bit.hpp  bit_flag.hpp  clang-format.txt  coding_standard.md  non_constructible.hpp  time_utils.hpp  various.hpp
hal/: DMA.hpp  IRQ_config.hpp  Scoped_guard.hpp  Systick.hpp  config.hpp  nvic.hpp  peripheral.hpp  rcc.hpp
hal/clocks/: hclk.hpp  pclk.hpp  sysclk.hpp
hal/clocks/sources/: hsi48.hpp  lse.hpp  pll.hpp
hal/peripherals/: ADC.hpp  GPIO.hpp  I2C.hpp  SPI.hpp  Timer.hpp  USART.hpp  crc.hpp  internal_flash.hpp  iwdg.hpp  option_bytes.hpp  rng.hpp  rtc.hpp
hal/sources/: hse.hpp  hsi16.hpp  hsi48.hpp  lse.hpp  lsi.hpp  msi.hpp  pll.hpp
hal/system/: hsem.hpp  mcu.hpp  pwr.hpp
hal/utils/: delay.hpp  tick_counter.hpp  wait_until.hpp
soc/: Scoped_guard.hpp  peripheral.hpp
soc/ST/CMSIS/Device/ST/STM32L0xx/Include/: stm32l010x6.h  stm32l010x8.h  stm32l010xb.h  stm32l011xx.h  stm32l031xx.h  stm32l041xx.h  stm32l052xx.h  stm32l071xx.h  stm32l072xx.h  stm32l082xx.h
soc/ST/CMSIS/Device/ST/STM32WBxx/Source/Templates/: system_stm32wbxx.c
soc/ST/arm/: IRQ_config.hpp  Systick.cpp  Systick.hpp
soc/ST/arm/CMSIS/Device/ST/STM32L0xx/Include/: stm32l010x4.h  stm32l021xx.h  stm32l051xx.h  stm32l053xx.h  stm32l062xx.h  stm32l063xx.h  stm32l073xx.h  stm32l081xx.h  stm32l083xx.h
soc/ST/arm/CMSIS/Device/ST/STM32L0xx/Source/Templates/gcc/linker/: STM32L010F4Px_FLASH.ld
soc/ST/arm/m0/: nvic.hpp
soc/ST/arm/m4/: nvic.hpp
soc/ST/m0/: IRQ_config.hpp  nvic.hpp
soc/ST/m0/Systick/: Systick.cpp  Systick.hpp
soc/ST/m0/stm32l0/rm0451/: DMA.cpp  DMA.hpp  defs.hpp  rcc.hpp
soc/ST/m0/stm32l0/rm0451/peripherals/ADC/: ADC.cpp  ADC.hpp
soc/ST/m0/stm32l0/rm0451/peripherals/GPIO/: GPIO.cpp  GPIO.hpp
soc/ST/m0/stm32l0/rm0451/peripherals/SPI/: SPI.cpp  SPI.hpp
soc/ST/m0/stm32l0/rm0451/peripherals/Timer/: LPTIM.cpp  LPTIM.hpp
soc/ST/m0/stm32l0/rm0451/peripherals/USART/: DMA.cpp  DMA.hpp  LPUART.hpp  USART.cpp  USART.hpp
soc/ST/m0/stm32l0/rm0451/peripherals/internal_flash/: internal_flash.cpp  internal_flash.hpp  option_bytes.cpp  option_bytes.hpp
soc/ST/m0/stm32l0/rm0451/sources/: hse.cpp  hse.hpp  hsi16.cpp  hsi16.hpp  msi.cpp  msi.hpp
soc/ST/m0/stm32l0/rm0451/system/mcu/: mcu.cpp  mcu.hpp
soc/ST/m0/stm32l0/rm0451/system/pwr/: pwr.cpp  pwr.hpp
soc/ST/m0/stm32l0/rm0451/utils/: delay.cpp  delay.hpp  tick_counter.cpp  tick_counter.hpp  wait_until.cpp  wait_until.hpp
soc/ST/m4/: IRQ_config.hpp  nvic.hpp
soc/ST/m4/Systick/: Systick.cpp  Systick.hpp
soc/ST/m4/stm32wb/rm0434/: DMA.cpp  DMA.hpp  rcc.hpp
soc/ST/m4/stm32wb/rm0434/peripherals/ADC/: ADC.cpp  ADC.hpp
soc/ST/m4/stm32wb/rm0434/peripherals/GPIO/: GPIO.cpp  GPIO.hpp
soc/ST/m4/stm32wb/rm0434/peripherals/I2C/: I2C.cpp  I2C.hpp
soc/ST/m4/stm32wb/rm0434/peripherals/SPI/: SPI.cpp  SPI.hpp
soc/ST/m4/stm32wb/rm0434/peripherals/Timer/: LPTIM.cpp  LPTIM.hpp  TIM.cpp  TIM.hpp
soc/ST/m4/stm32wb/rm0434/peripherals/USART/: DMA.cpp  DMA.hpp  LPUART.hpp  USART.cpp  USART.hpp
soc/ST/m4/stm32wb/rm0434/peripherals/crc/: crc.cpp  crc.hpp
soc/ST/m4/stm32wb/rm0434/peripherals/internal_flash/: internal_flash.cpp  internal_flash.hpp  option_bytes.cpp  option_bytes.hpp
soc/ST/m4/stm32wb/rm0434/peripherals/iwdg/: iwdg.cpp  iwdg.hpp
soc/ST/m4/stm32wb/rm0434/peripherals/rng/: rng.cpp  rng.hpp
soc/ST/m4/stm32wb/rm0434/peripherals/rtc/: rtc.cpp  rtc.hpp
soc/ST/m4/stm32wb/rm0434/sources/: hse.cpp  hse.hpp  hsi16.cpp  hsi16.hpp  hsi48.cpp  hsi48.hpp  lse.cpp  lse.hpp  lsi.cpp  lsi.hpp  msi.cpp  msi.hpp  pll.cpp  pll.hpp
soc/ST/m4/stm32wb/rm0434/system/hsem/: hsem.cpp  hsem.hpp
soc/ST/m4/stm32wb/rm0434/system/mcu/: mcu.cpp  mcu.hpp
soc/ST/m4/stm32wb/rm0434/system/pwr/: pwr.cpp  pwr.hpp
soc/ST/m4/stm32wb/rm0434/utils/: delay.cpp  delay.hpp  tick_counter.cpp  tick_counter.hpp  wait_until.hpp
soc/st/arm/: Systick.cpp  Systick.hpp
soc/st/arm/m0/: nvic.hpp
soc/st/arm/m4/: nvic.hpp
xmcu/: Duration.hpp  Frequency.hpp  Limited.hpp  Not_null.hpp  assertion.cpp  assertion.hpp  bit.hpp  config.hpp  look_up_tables.hpp  non_constructible.hpp  time_utils.cpp  time_utils.hpp
xmcu/hal/: DMA.hpp  IRQ_config.hpp  Scoped_guard.hpp  Systick.hpp  nvic.hpp  peripheral.hpp  rcc.hpp
xmcu/hal/clocks/: clk48.hpp  hclk.hpp  pclk.hpp  sysclk.hpp
xmcu/hal/clocks/sources/: hse.hpp  hsi16.hpp  hsi48.hpp  lse.hpp  lsi.hpp  msi.hpp  pll.hpp
xmcu/hal/peripherals/: ADC.hpp  AES.hpp  GPIO.hpp  I2C.hpp  Public_key_accelerator.hpp  SPI.hpp  Timer.hpp  USART.hpp  crc.hpp  internal_flash.hpp  iwdg.hpp  option_bytes.hpp  pka.hpp  rng.hpp  rtc.hpp  wwdg.hpp
xmcu/hal/system/: hsem.hpp  mcu.hpp  pwr.hpp
xmcu/hal/utils/: delay.hpp  tick_counter.hpp  wait_until.hpp
